# blumn

./: .gitignore  Procfile  README.md  api_structure.md  examine_excel.py  heroku.yml  opus_excel_handler.py  opus_main.py  package-lock.json  package.json  previously_requirements.txt  pyproject.toml  requirements.txt  setup.py  start.sh
.cursor/rules/: general-behaviour.mdc  keep-it-simple.mdc  package-manager.mdc  powershell-usage.mdc  terminal-commands.mdc
backend/: api_test.ipynb
backend/app/: main.py
backend/app/core/: excel_handler.py  opus_diff_excel_handler.py
backend/app/database/: __init__.py  connection.py  create_tables.py  create_tables_simple.py  crud.py  database_strategy.md  dependencies.py  init_db.py  migrate_excel.py  migrate_excel_simple.py  models.py  query_examples.py  schemas.py  sql_practice_collection.py  test_connection.py  verify_migration.py  verify_migration_simple.py
backend/app/learn_database/: learning_plan.md  simple_connection.py  step_02_models_core.py  step_02_models_orm.py
backend/app/models/: plant.py
data/: blumen_data - backup 03_08_2025.xlsx  blumen_data - backup 17_06_2025.xlsx  blumen_data - backup_14052025.xlsx  blumen_data backup_13062025.xlsx  blumen_data backup_15052025.xlsx  blumen_data backup_17052025.xlsx  blumen_data.xlsx
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  metadata.ts  page.tsx  registry.tsx
frontend/src/app/plants/: page.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/plants/: page.tsx
(+2 files in other folders)
